Fixed discord_mod_utils.cog not being a thing

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,8 @@ classifiers =
 [options]
 packages =
     discord_mod_utils
+    discord_mod_utils.cogs
+    discord_mod_utils.cogs.moderation
 install_requires =
     py-cord>=2.0.0b7
     firebase-admin>=5
